# embedded-bdd

./: .gitignore  Readme.md
doc/: Interfaces.puml  system.puml
features/: PiL.feature  calc.feature
features/steps/: PiL.py  calc.py
proj/: CMakeLists.txt  prj.conf  sample.yaml
proj/boards/arm/mystm32f4/: Kconfig.board  Kconfig.defconfig  mystm32f4.dts
proj/boards/xtensa/myesp32/: CMakeLists.txt  Kconfig.defconfig  myesp32.dts
proj/common/: CMakeLists.txt
proj/common/sharedlib/: main.cpp  main.h
proj/common/src/: CMakeLists.txt  MockHardware.h
proj/common/tests/: main.cpp
proj/lib/: CMakeLists.txt
proj/lib/src/: CMakeLists.txt  MockHardware.cpp  MockHardware.h  heater.cpp  heater.h
proj/lib/tests/: common.h  main.cpp
proj/src/: AnalogI.h  AnalogO.cpp  AnalogO.h  Board.cpp  LogicIO.cpp  LogicIO.h  ModuleCom.cpp  ModuleCom.h  Settings.cpp  Settings.h  cmd_io.cpp  main.cpp  main.h  shell_util.cpp
proj/target_app/: CMakeLists.txt  prj.conf
proj/target_app/boards/xtensa/myesp32/: Kconfig.board  myesp32.yaml  myesp32_defconfig
proj/target_app/src/: AnalogI.cpp  AnalogIO.h  Board.h  main.cpp
proj/test_bdd/features/: environment.py
proj/test_bdd/features/steps/: ConnectorBase.py  ConnectorPIL.py  ConnectorSIL.py  PiL.py  connector.py
proj/test_bdd/reports/: plot.ipynb
reports/: plot.ipynb
